# node-compat

./: .gitignore  Cargo.toml  Makefile  README.md  tsconfig.base.json
.cargo/: config
apps/demo/: package.json  webpack.config.js
apps/demo-angular/: package.json
apps/demo-angular/src/: app-routing.module.ts  home.component.ts
apps/demo-angular/src/plugin-demos/: node-buffer.component.html  node-buffer.component.ts  node-buffer.module.ts  node-core.component.html  node-core.component.ts  node-core.module.ts  node-fs.component.html  node-fs.component.ts  node-fs.module.ts
apps/demo/src/: app.ts  main-page.xml
apps/demo/src/plugin-demos/: node-buffer.ts  node-buffer.xml  node-core.ts  node-core.xml  node-fs.ts  node-fs.xml
crates/libs/node-buffer/: Cargo.toml
crates/libs/node-buffer/src/: lib.rs
crates/libs/node-c/: Cargo.toml  README.md  cbindgen.toml
crates/libs/node-c/src/: lib.rs
crates/libs/node-core/: Cargo.toml
crates/libs/node-core/src/: error.rs  lib.rs  thread.rs
crates/libs/node-crypto/: Cargo.toml
crates/libs/node-cxx/: Cargo.toml  build.rs
crates/libs/node-cxx/src/: lib.rs
crates/libs/node-fs/: Cargo.toml
crates/libs/node-fs/src/: a_sync.rs  constants.rs  copy_file.rs  file_dir.rs  file_dirent.rs  file_handle.rs  file_stat.rs  lib.rs  prelude.rs  sync.rs
crates/libs/node-fs/src/stream/: read.rs
crates/samples/playground/: Cargo.toml
tools/: package-settings.json  workspace-scripts.js
tools/demo/: index.ts
tools/demo/node-buffer/: index.ts
tools/demo/node-core/: index.ts
tools/demo/node-fs/: index.ts
tools/scripts/: build-android.sh  build-headers.sh  copy-android.sh  copy-ios.sh
(+4 files in other folders)
