[package]
name = "node-c"
version = "0.1.0"
edition = "2021"

[lib]
name = "nodenative"
crate-type = ["staticlib", "cdylib"]

[build]
rustflags = ["-Cpanic=abort", "-C target-cpu=native", "-C target-feature=-outline-atomics"]

[dependencies]
libc = "0.2.151"
node-core = {path = "../node-core"}
node-buffer = { path = "../node-buffer" }
node-fs = { path = "../node-fs" }

[build-dependencies]
cbindgen = "0.26.0"