[package]
name = "node-fs"
version = "0.1.0"
edition = "2021"

[dependencies]
node-core = { path = "../node-core" }
node-buffer = { path = "../node-buffer" }
parking_lot = "0.12.0"
once_cell = "1.8.0"
filetime = "0.2"
libc = "0.2.144"
faccess = { git = "https://github.com/MightyPork/faccess", rev = "0c94ef6d4b08a650ecaa31d4dcbd1b769f8cb56b" }
notify = "6.0.0"
backoff = { git = "https://github.com/ihrwein/backoff", rev = "08f4e2111ea4b856b24556555d5c6ecf14cfa69d" }
num_cpus = "1.15.0"
log = "0.4.18"
rand = "0.8.5"

[target.'cfg(target_os="android")'.dependencies]
jni = "0.21.1"
android_logger = "0.13.1"

[target.'cfg(target_os="macos")'.dependencies]
objc = { version = "0.2.4" }

[target.'cfg(target_os="ios")'.dependencies]
objc = { version = "0.2.4" }